--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="remove_ads">Remove Ads</string>
     <string name="restore">Restore</string>
     <string name="quiz_skip_text">ПРОПУСТИТЬ</string>
+    <string name="cats_purchasable_title">КУПИТЬ КАТЕГОРИЮ</string>
+    <string name="cats_passed_title">ПРОЙДЕННЫЕ КАТЕГОРИИ</string>
     <string name="points_record">БАЛЛОВ НАБРАНО ВАМИ ИЗ %d</string>
     <string name="title_activity_knwoledge_description">KnwoledgeDescription</string>
     <string name="action_settings">Settings</string>
@@ -32,4 +34,5 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="cats_choose_title">ВЫБЕРИТЕ КАТЕГОРИЮ</string>
 </resources>
