--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="restore">Restore</string>
     <string name="quiz_skip_text">ПРОПУСТИТЬ</string>
     <string name="cats_purchasable_title">КУПИТЬ КАТЕГОРИЮ</string>
-    <string name="cats_passed_title">ПРОЙДЕННЫЕ КАТЕГОРИИ</string>
+    <string name="cats_passed_title">\u0020\u0020ПРОЙДЕННЫЕ КАТЕГОРИИ</string>
     <string name="points_record">БАЛЛОВ НАБРАНО ВАМИ ИЗ %d</string>
     <string name="title_activity_knwoledge_description">KnwoledgeDescription</string>
     <string name="action_settings">Settings</string>
@@ -35,4 +35,6 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="cats_choose_title">ВЫБЕРИТЕ КАТЕГОРИЮ</string>
+    <string name="correct_text">ПРАВИЛЬНО!</string>
+    <string name="wrong_text">НЕПРАВИЛЬНО!</string>
 </resources>
