design and splash screen added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <integer name="com_vk_sdk_AppId">5160284</integer>
+    <string name="app_id">543395344679</string>
 
     <string name="hello">Hello World, QuizAppActivity!</string>
     <string name="app_name">Знание - сила</string>
     <!--<string name="app_id">286312204670</string>-->
-    <string name="app_id">543395344679</string>
+
 	<string name="no_categories">Please add Quiz Categories</string>
 	<string name="categories">Categories</string>
 	<string name="final_score">You have scored %d points</string>
